Added an about me section and added an image.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Janae Martin | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Janae Martin | WDD 130</h1>
+        <img src="images/profile.png" alt="Hello, my name is Janae Martin" width="200">
+        <p>Hello! My name is Janae Martin and I am from Snowflake, Arizona. I like to draw and paint as well as play my
+            violin in my free time. I am currently learning Software Development and hope to expand my knowledge on
+            computers through these courses. I also like to tinker with and fix electronics and hope to make a
+            career out of it in the future.</p>
+    </main>
+    <footer>
+        <p>©2025 ❖ Janae Martin ❖ Arizona, USA</p>
+    </footer>
 </body>
+
 </html>
