fixed a grammer error

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -26,7 +26,8 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nam.</p>
         </section>
         <section>
-            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quos!</h2>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, quos!</p>
         </section>
     </main>
     <aside>
