--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Janae Martin | WDD 130</title>
     <meta name="description"
-        content="Describe your home page here using keywords like your name, the course, the purpose of the page.">
-    <meta name="author" content="Your name">
+        content="I'm Janae Martin and I am taking WDD 130 to learn more about building websites. This webpage is to help me learn the basics of building a website.">
+    <meta name="author" content="Janae Martin">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -26,13 +26,16 @@
             computers through these courses. I also like to tinker with and fix electronics and hope to make a
             career out of it in the future.</p>
     </main>
+
     <aside>
         <h2>Arizona</h2>
         <img src="images/Arizona-Desert-Mountains-2518-Edit.jpg" alt="Arizona Landscape">
         <p>Arizona is a state located in the United States. It is a Western state that borders Mexico, New Mexico, Utah,
             Nevada, and California. It is a state known for its beautiful desert landscapes, making it a huge tourist
             destination. The state capitol, Phoenix, is the 5th largest city in the United States.</p>
+
     </aside>
+
     <footer>
         <p>©2025 ❖ Janae Martin ❖ Arizona, USA</p>
     </footer>
