week 2 project 4th pass

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Janae Martin | WDD 130</title>
-    <meta name="description"
-        content="I'm Janae Martin and I am taking WDD 130 to learn more about building websites. This webpage is to help me learn the basics of building a website.">
+    <meta name="description" content="I'm Janae Martin and I am taking WDD 130 to learn more about building websites.">
     <meta name="author" content="Janae Martin">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
